Terminata versione con: 1) interfaccia di amministrazione per configurazione dei premi e visualizzazione (con eventuale cancellazione) dei premi fruiti protetta da password statica; 2) calcolo del diritto al premio; 3) selezione e consuntivazione della fruizione del premio con conseguente decurtazione dei minuti corrispondenti; 4) visualizzazione dei premi fruiti

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,6 +38,9 @@
     <string name="taskExecutionMinutesNeeded">Minuti necessari</string>
     <string name="no_available_awards">Non è stato configurato alcun premio</string>
     <string name="taskExecutionMinutesNeeded_req">Minuti di attività eseguita necessari</string>
+    <string name="no_used_awards_description">Non sono stati fruiti premi finora.</string>
+    <string name="dateOfUse">Data e ora di utilizzo</string>
+    <string name="delete_used_award_question">Vuoi eliminare questo utilizzo di premio?</string>
     <string-array name="tasks_array">
         <item>Inglese</item>
         <item>Compiti</item>
